@@ -3,12 +3,10 @@ package net.bounceme.chronos.chguadalquivir.adapter.out;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.apache.commons.collections.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -27,14 +25,17 @@ import net.bounceme.chronos.dto.chguadalquivir.PuntoControlDTO;
 @Slf4j
 public class PuntoControlDb implements PuntoControlPort {
 
-	@Autowired
 	private PuntoControlRepository repository;
 	
-	@Autowired
 	private ZonaRepository zonaRepository;
 
-	@Autowired
 	private ModelMapper modelMapper;
+
+	public PuntoControlDb(PuntoControlRepository repository, ZonaRepository zonaRepository, ModelMapper modelMapper) {
+		this.repository = repository;
+		this.zonaRepository = zonaRepository;
+		this.modelMapper = modelMapper;
+	}
 
 	/**
 	 *
@@ -44,7 +45,7 @@ public class PuntoControlDb implements PuntoControlPort {
 	public List<PuntoControlDTO> listAll() {
 		List<PuntoControl> puntos = repository.findAll();
 		return CollectionUtils.isNotEmpty(puntos) ? puntos.stream()
-				.map(punto -> modelMapper.map(punto, PuntoControlDTO.class)).collect(Collectors.toList())
+				.map(punto -> modelMapper.map(punto, PuntoControlDTO.class)).toList()
 				: Collections.emptyList();
 	}
 
